# fastapi_trello

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  middleware.py  pyproject.toml  requirements.txt
app/: __init__.py
app/lanes/: views.py
app/projects/: views.py
app/tasks/: views.py
app/users/: views.py
database/: db.py
migrations/: env.py
migrations/versions/: 0b31353fade3_create_user_table.py  2dd0a1459cc1_create_lane_model.py  432e086d8e0f_add_position_column_to_task_model.py  4c565f371d04_lanes_model_add_position_column.py  653dfe5f4443_fix_user_table.py  8266a68ed008_create_tasks_table.py  82a10d324441_調整_users_資料表.py  8848cee552f3_create_project_model_and_user_project_.py  ab2042e7230b_remove_lanes_model_position_column_.py  b61b821e6fa1_fix_user_table.py  bddc605a65e4_rename_user_table_to_users.py  d6fdc5ef6e32_update_project_mmodel_description_.py
models/: __init__.py  lane.py  project.py  task.py  user.py  user_project.py
schemas/: lane.py  project.py  task.py
static/css/: lanes.css
static/js/: auth_alerts.js  htmx_events.js  lane_actions.js  project_actions.js  sortable.js  sweet_alert.js  task_actions.js
templates/: layout.html
templates/auth/: login.html  register.html
templates/common/: error_message.html  message_data.html
templates/lanes/: edit.html  index.html  new.html  show.html
templates/projects/: edit.html  index.html  members.html  show.html
templates/tasks/: edit.html  index.html  new.html  show.html
templates/users/: edit.html  (+2 more)
utils/: auth.py  flash.py  get_db.py
(+14 files in other folders)
